--- a/latest.html
+++ b/latest.html
@@ -33,7 +33,7 @@
     </div>
     <div id="sub-navigation">
       <ul>
-        <li><a href="index.html">SHOW ALL</a></li>
+        <li><a href="index.html">ALL</a></li>
         <li><a href="latest.html" style="color: red;">LATEST</a></li>
         <li><a href="#">MOST POPULAR</a></li>
         <li><a href="#">1990s & 2000s</a></li>
